# GLASS

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release-windows.yml
benchmarks/: audit_precision.py  bench_cpu_calibration.py  bench_cuda_resident_stack.py  bench_end_to_end.py  bench_gpu_calibration.py  bench_gpu_integration.py  bench_io_streaming.py  bench_resident_fused_matrix_dispatch.py  bench_resident_overlimit_winsorized.py  bench_resident_prefetch_sweep.py  bench_scan.py  common.py  compare_astroalign_gpu_alignment.py  compare_wbpp_stages.py  phase2_m38_h_200_audit_maps_contract.json  phase2_m38_h_200_contract.json  phase2_m38_h_200_ln_on_default_contract.json  phase2_m38_h_200_resident_drift_contract.json  resident_winsorized_microbenchmark_contract.json  resident_winsorized_sweep_contract.json  summarize_wbpp_speedup.py
cmake/: CompilerWarnings.cmake  FindCUDAArch.cmake
cpp/: CMakeLists.txt
cpp/cuda/: calibration_kernels.cu  common.cuh  integration_kernels.cu  local_norm_kernels.cu  master_frame_kernels.cu  registration_kernels.cu  smoke_add_kernels.cu  star_detect_kernels.cu  warp_kernels.cu
cpp/include/glass_cuda/: api.hpp  calibration.hpp  debayer.hpp  device.hpp  errors.hpp  memory.hpp  tensor_view.hpp  tile.hpp
cpp/include/gpwbpp_cuda/: api.hpp  calibration.hpp  device.hpp  errors.hpp  master_frames.hpp  memory.hpp  tensor_view.hpp  tile.hpp
cpp/src/: api.cpp  bindings.cpp  device.cpp  errors.cpp  memory.cpp  native_bindings.cpp
docs/: algorithm_sources.md  architecture.md  calibration_model.md  completion_audit.md  cuda_backend.md  final_acceptance_audit.md  gates.md  integration_model.md  known_limitations.md  local_normalization_model.md  memory_model.md  phase2_algorithm_hardening.md  pixinsight_blackbox_reference.md  pixinsight_frontend.md  precision_model.md  project_overview.md  registration_model.md  validation.md  windows_release.md
docs/releases/: v0.1.0-windows-gpu.2.md  v0.1.0-windows-gpu.3.md  v0.1.0-windows-gpu.4.md  v0.1.0-windows-gpu.5.md  v0.1.0-windows-gpu.6.md  v0.1.0-windows-gpu.7.md  v0.1.0-windows-gpu.8.md  v0.1.0-windows.1.md
packaging/windows/: GLASS.iss  README.md  build_portable.ps1  build_wheel.ps1  install_cuda_toolkit_minimal.ps1
pixinsight/: GLASS.js  GPWBPP.js  README.md
runs/checkpoints/: acceptance_audit_cli_status.md  benchmark_status.md  blackbox_timing_autofill_status.md  bounded_master_accumulator_status.md  completion_audit_status.md  exact_flat_median_status.md  final_acceptance_audit_status.md  gate_00_capability_flags_refresh_status.md  gate_00_status.md  gate_01_pierside_metadata_status.md  gate_01_status.md  gate_01_subset_all_compatible_calibration_status.md  gate_02_status.md  gate_03_status.md  gate_04_precision_status.md  gate_04_resident_report_status.md  gate_04_resident_run_status.md  gate_04_resident_stack_status.md  gate_04_status.md  gate_05_status.md  gate_05_xisf_compare_status.md  gate_06_status.md  gate_07_cuda_star_candidate_mask_status.md  gate_07_cuda_star_grid_catalog_status.md  gate_07_cuda_star_top_catalog_status.md  gate_07_status.md  gate_08_12_resident_ncc_fallback_status.md  gate_08_astroalign_backend_status.md  gate_08_astroalign_gpu_pair_v4_status.md  gate_08_astroalign_gpu_port_analysis_status.md  gate_08_astroalign_matches_cuda_similarity_bridge_status.md  gate_08_catalog_agreement_acceptance_status.md  gate_08_catalog_similarity_refit_pixel_refine_status.md  gate_08_catalog_topk_diagnostics_status.md  gate_08_cpu_triangle_asterism_bridge_status.md  gate_08_cuda_astroalign_comparison_status.md  gate_08_cuda_catalog_bounded_compare_status.md  gate_08_cuda_catalog_multiseed_production_status.md  gate_08_cuda_catalog_prior_status.md  gate_08_cuda_catalog_refinement_status.md  (+1849 more)
runs/checkpoints/s2_gate_313_local_norm_contract_fixture_run/: local_norm_results.json
runs/checkpoints/s2_gate_314_cpu_run/: calibration_artifacts.json  frame_accounting.json  frame_quality.json  integration_results.json  local_norm_results.json  manifest.json  processing_plan.json  registration_results.json  report.html  run_command.txt  run_state.json  run_timing.json  warp_results.json
runs/checkpoints/s2_gate_314_guardrails/: acceptance_contract_bundle.json  guardrails_summary.json  local_norm_contract.json  local_norm_contract.md  pipeline_contract.json  report.html  stack_engine_contract.json
runs/checkpoints/s2_gate_314_synthetic_data/: golden_truth.json
src/: glass_cuda.py  gpwbpp_cuda.py
src/glass/: __init__.py  capabilities.py  cli.py  config.py  models.py
src/gpwbpp/: __init__.py  capabilities.py  cli.py
tests/: conftest.py  test_acceptance_audit.py  test_benchmark_contract_profile.py  test_benchmarks.py  test_blackbox_finalize.py  test_blackbox_package.py  test_candidate_comparison.py  test_candidate_comparison_sweep.py  test_candidate_runtime_sweep_execute.py  test_candidate_runtime_sweep_plan.py  test_capabilities.py  test_cli_smoke.py  test_compare_frame_family.py  test_compare_outliers.py  test_compare_report.py  test_compare_tile_attribution.py  test_compare_tile_integration.py  test_compare_tile_pack.py  test_compare_tile_replay.py  test_cpu_calibration.py  test_cpu_integration.py  test_cpu_local_norm.py  test_cpu_master_frames.py  test_cpu_registration.py  test_cpu_star_detect.py  test_cpu_warp.py  test_cuda_device_info.py  test_cuda_import.py  test_cuda_package_compatibility.py  test_cuda_resident_stack.py  test_cuda_skip_policy.py  test_cuda_smoke.py  test_default_promotion_manifest.py  test_dq_contract_profile.py  test_dq_map_verify.py  test_dq_provenance.py  test_fits_io.py  test_fits_metadata.py  test_frame_accounting.py  test_frame_weight_proposal.py  (+105 more)
(+974 files in other folders)
