[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glass-stack"
version = "0.1.0"
description = "GLASS: GPU-Accelerated Lightframe Alignment and Stacking System."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "GLASS contributors" }]
dependencies = [
  "astropy>=6",
  "numpy>=1.26",
  "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
report = ["jinja2>=3.1"]
gpu = ["cmake>=3.27", "ninja>=1.11", "pybind11>=2.12"]
align = ["astroalign>=2.6"]
zarr = ["zarr>=2.17"]
release = ["build>=1.2", "twine>=5.0", "wheel>=0.43"]

[project.scripts]
glass = "glass.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["glass_cuda"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
